--- a/testapp/frontend/testapp/nginx-default.conf
+++ b/testapp/frontend/testapp/nginx-default.conf
@@ -1,13 +1,11 @@
 server {
-  listen 80;
-  server_name IP_ADDR_OR_HOSTNAME;
-
-  location / {
-    proxy_pass "http://127.0.0.1:8080";
-    client_max_body_size 300M;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_cache_bypass $http_upgrade;
-  }
+    listen 80;
+    server_name IP_ADDR_OR_HOSTNAME;    
+    charset utf-8;
+    root    /var/www/CloudSys/testapp/frontend/testapp/dist;
+    index   index.html;
+    location / {
+        root /var/www/CloudSys/testapp/frontend/testapp/dist;
+        try_files $uri  /index.html;
+    }    
 }
