--- a/testapp/backend/node/package.json
+++ b/testapp/backend/node/package.json
@@ -9,6 +9,7 @@
   "author": "Julien Piguet",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.5.2",
     "express": "^4.18.1",
     "uuid": "^8.3.2"
   }
