--- a/testapp/frontend/testapp/nginx-default.conf
+++ b/testapp/frontend/testapp/nginx-default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name IP_ADDR_OR_HOSTNAME;    
+    listen 80 default_server;
+    server_name _;    
     charset utf-8;
     root    /var/www/CloudSys/testapp/frontend/testapp/dist;
     index   index.html;
